# ChangeLog for dev-ruby/pdf-writer
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/pdf-writer/ChangeLog,v 1.19 2009/04/25 17:46:02 armin76 Exp $

  25 Apr 2009; Raúl Porcel <armin76@gentoo.org> pdf-writer-1.1.8.ebuild:
  ia64 stable wrt #265435

  20 Apr 2009; Markus Meier <maekke@gentoo.org> pdf-writer-1.1.8:
  x86 stable, bug #265435

  14 Apr 2009; Thomas Anderson <gentoofan23@gentoo.org>
  pdf-writer-1.1.8.ebuild:
  stable amd64, bug 265435

  14 Apr 2009; Hans de Graaff <graaff@gentoo.org> pdf-writer-1.1.8.ebuild:
  Add a USE_RUBY statement.

  08 Apr 2009; Hans de Graaff <graaff@gentoo.org> -pdf-writer-1.1.7.ebuild:
  Remove intermediate version.

  24 Mar 2008; Raúl Porcel <armin76@gentoo.org> pdf-writer-1.1.8.ebuild:
  Add ~ia64

*pdf-writer-1.1.8 (19 Mar 2008)

  19 Mar 2008; Hans de Graaff <graaff@gentoo.org> +pdf-writer-1.1.8.ebuild:
  Version bump:
   * Fix page numbering bug
   * Fix font embedding

  12 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  pdf-writer-1.1.7.ebuild:
  keyworded ~arch for x86, bug 209691

*pdf-writer-1.1.7 (22 Jan 2008)

  22 Jan 2008; Richard Brown <rbrown@gentoo.org> +pdf-writer-1.1.7.ebuild:
  Version bump. Drop ia64, x86 keywords due to new deps.

  17 Sep 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing citizen428 from metadata.xml (see #56803 for reference).

  10 May 2007; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  Fix metadata

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  pdf-writer-1.1.3.ebuild:
  Convert to use elog.

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org> pdf-writer-1.1.3.ebuild:
  Mark 1.1.3 stable on ia64

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> pdf-writer-1.1.3.ebuild:
  Mark 1.1.3 ~ia64

  12 Nov 2005; Michael Kohl <citizen428@gentoo.org>
  -pdf-writer-1.1.1.ebuild, -pdf-writer-1.1.2.ebuild:
  Cleaned out old versions, also related to  bug #103192
