@@ -1,14 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-prof/ruby-prof-0.6.0.ebuild,v 1.1 2008/02/26 05:43:36 flameeyes Exp $
-
-inherit ruby gems
-
-DESCRIPTION="A module for profiling Ruby code"
-HOMEPAGE="http://rubyforge.org/projects/ruby-prof/"
-SRC_URI="http://gems.rubyforge.org/gems/${P}.gem"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
-IUSE=""
