@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-prof
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-prof/ChangeLog,v 1.11 2008/12/09 14:01:37 flameeyes Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-prof/ChangeLog,v 1.12 2009/05/31 07:30:52 graaff Exp $
+
+  31 May 2009; Hans de Graaff <graaff@gentoo.org> -ruby-prof-0.6.0.ebuild:
+  Remove old version.
 
 *ruby-prof-0.7.2 (09 Dec 2008)
 
